{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 2650,
  "lineage": "191e1810-6845-2c66-4954-91ac45fad1c1",
  "resources": [
    {
      "module": "module.NSG[\"nsg-rygus-test\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/networkSecurityGroups/nsg-rygus-test",
            "location": "koreacentral",
            "name": "nsg-rygus-test",
            "resource_group_name": "khkim_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-icmp",
                "priority": 500,
                "protocol": "Icmp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "1.235.222.130",
                  "218.48.21.223"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "1.235.222.130",
                  "218.48.21.223"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-npm",
                "priority": 202,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "1.235.222.130",
                  "10.0.5.0/24",
                  "218.48.21.223"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-rdp",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "1.235.222.130",
                  "218.48.21.223"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "1.235.222.130",
                  "10.0.5.0/24",
                  "218.48.21.223"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-rygus-test",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef"
          },
          "dependencies": [
            "module.RG.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.NSG[\"nsg-rygus-test\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "allow-http",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/networkSecurityGroups/nsg-rygus-test/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "nsg-rygus-test",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "khkim_rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "1.235.222.130",
              "10.0.5.0/24",
              "218.48.21.223"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-http",
            "network_security_group_name": "nsg-rygus-test",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.RG.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "allow-icmp",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/networkSecurityGroups/nsg-rygus-test/securityRules/allow-icmp",
            "name": "allow-icmp",
            "network_security_group_name": "nsg-rygus-test",
            "priority": 500,
            "protocol": "Icmp",
            "resource_group_name": "khkim_rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "1.235.222.130",
              "218.48.21.223"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-icmp",
            "network_security_group_name": "nsg-rygus-test",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.RG.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "allow-npm",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3000",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/networkSecurityGroups/nsg-rygus-test/securityRules/allow-npm",
            "name": "allow-npm",
            "network_security_group_name": "nsg-rygus-test",
            "priority": 202,
            "protocol": "Tcp",
            "resource_group_name": "khkim_rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "1.235.222.130",
              "10.0.5.0/24",
              "218.48.21.223"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-npm",
            "network_security_group_name": "nsg-rygus-test",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.RG.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "allow-rdp",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/networkSecurityGroups/nsg-rygus-test/securityRules/allow-rdp",
            "name": "allow-rdp",
            "network_security_group_name": "nsg-rygus-test",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "khkim_rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "1.235.222.130",
              "218.48.21.223"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-rdp",
            "network_security_group_name": "nsg-rygus-test",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.RG.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "allow-ssh",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/networkSecurityGroups/nsg-rygus-test/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "nsg-rygus-test",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "khkim_rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "1.235.222.130",
              "218.48.21.223"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-ssh",
            "network_security_group_name": "nsg-rygus-test",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.RG.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.UDR[\"aks-node-udr\"]",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "udr-aks-to-fw",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/KHKIM_RG/providers/Microsoft.Network/routeTables/aks-node-udr/routes/udr-aks-to-fw",
            "name": "udr-aks-to-fw",
            "next_hop_in_ip_address": "10.0.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "KHKIM_RG",
            "route_table_name": "aks-node-udr",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "udr-aks-to-fw",
            "resource_group_name": "KHKIM_RG",
            "route_table_name": "aks-node-udr",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef"
          },
          "dependencies": [
            "module.RG.azurerm_resource_group.rg",
            "module.UDR.azurerm_route_table.udr"
          ]
        }
      ]
    },
    {
      "module": "module.UDR[\"aks-node-udr\"]",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "udr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/KHKIM_RG/providers/Microsoft.Network/routeTables/aks-node-udr",
            "location": "koreacentral",
            "name": "aks-node-udr",
            "resource_group_name": "KHKIM_RG",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "udr-aks-to-fw",
                "next_hop_in_ip_address": "10.0.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "aks-node-udr",
            "resource_group_name": "KHKIM_RG",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef"
          },
          "dependencies": [
            "module.RG.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"Hub-vnet\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AzureFirewallManagementSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallManagementSubnet",
            "name": "AzureFirewallManagementSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "khkim_rg",
            "virtual_network_name": "Hub-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureFirewallManagementSubnet",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef",
            "virtual_network_name": "Hub-vnet"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.NSG.azurerm_network_security_rule.nsg_rule",
            "module.RG.azurerm_resource_group.rg",
            "module.UDR.azurerm_route.route",
            "module.UDR.azurerm_route_table.udr",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "AzureFirewallSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "khkim_rg",
            "virtual_network_name": "Hub-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureFirewallSubnet",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef",
            "virtual_network_name": "Hub-vnet"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.NSG.azurerm_network_security_rule.nsg_rule",
            "module.RG.azurerm_resource_group.rg",
            "module.UDR.azurerm_route.route",
            "module.UDR.azurerm_route_table.udr",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "aks-node-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/aks-node-subnet",
            "name": "aks-node-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "khkim_rg",
            "virtual_network_name": "Hub-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "aks-node-subnet",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef",
            "virtual_network_name": "Hub-vnet"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.NSG.azurerm_network_security_rule.nsg_rule",
            "module.RG.azurerm_resource_group.rg",
            "module.UDR.azurerm_route.route",
            "module.UDR.azurerm_route_table.udr",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "unique-nic-snet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.11.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/unique-nic-snet",
            "name": "unique-nic-snet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "khkim_rg",
            "virtual_network_name": "Hub-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "unique-nic-snet",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef",
            "virtual_network_name": "Hub-vnet"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.NSG.azurerm_network_security_rule.nsg_rule",
            "module.RG.azurerm_resource_group.rg",
            "module.UDR.azurerm_route.route",
            "module.UDR.azurerm_route_table.udr",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "vm-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.7.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/vm-subnet",
            "name": "vm-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "khkim_rg",
            "virtual_network_name": "Hub-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vm-subnet",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef",
            "virtual_network_name": "Hub-vnet"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.NSG.azurerm_network_security_rule.nsg_rule",
            "module.RG.azurerm_resource_group.rg",
            "module.UDR.azurerm_route.route",
            "module.UDR.azurerm_route_table.udr",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "vm2-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.8.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/vm2-subnet",
            "name": "vm2-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "khkim_rg",
            "virtual_network_name": "Hub-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vm2-subnet",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef",
            "virtual_network_name": "Hub-vnet"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.NSG.azurerm_network_security_rule.nsg_rule",
            "module.RG.azurerm_resource_group.rg",
            "module.UDR.azurerm_route.route",
            "module.UDR.azurerm_route_table.udr",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"Hub-vnet\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "unique-nic-snet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/unique-nic-snet",
            "network_security_group_id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/networkSecurityGroups/nsg-rygus-test",
            "subnet_id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/unique-nic-snet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.NSG.azurerm_network_security_rule.nsg_rule",
            "module.RG.azurerm_resource_group.rg",
            "module.UDR.azurerm_route.route",
            "module.UDR.azurerm_route_table.udr",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"Hub-vnet\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a6ac511c-ad88-4db8-92e1-671c7ea45607",
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet",
            "location": "koreacentral",
            "name": "Hub-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "khkim_rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/AzureFirewallManagementSubnet",
                "name": "AzureFirewallManagementSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.11.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/unique-nic-snet",
                "name": "unique-nic-snet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/networkSecurityGroups/nsg-rygus-test"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/aks-node-subnet",
                "name": "aks-node-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.7.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/vm-subnet",
                "name": "vm-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.8.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/Hub-vnet/subnets/vm2-subnet",
                "name": "vm2-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "owner": "김교현"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "Hub-vnet",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef"
          },
          "dependencies": [
            "module.RG.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"spoke1-vnet\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "unique-snet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "11.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/unique-snet",
            "name": "unique-snet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "khkim_rg",
            "virtual_network_name": "spoke1-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "unique-snet",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef",
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.NSG.azurerm_network_security_rule.nsg_rule",
            "module.RG.azurerm_resource_group.rg",
            "module.UDR.azurerm_route.route",
            "module.UDR.azurerm_route_table.udr",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "vm-snet1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "11.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/vm-snet1",
            "name": "vm-snet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "khkim_rg",
            "virtual_network_name": "spoke1-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vm-snet1",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef",
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.NSG.azurerm_network_security_rule.nsg_rule",
            "module.RG.azurerm_resource_group.rg",
            "module.UDR.azurerm_route.route",
            "module.UDR.azurerm_route_table.udr",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "vm-snet2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "11.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/vm-snet2",
            "name": "vm-snet2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "khkim_rg",
            "virtual_network_name": "spoke1-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vm-snet2",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef",
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.nsg",
            "module.NSG.azurerm_network_security_rule.nsg_rule",
            "module.RG.azurerm_resource_group.rg",
            "module.UDR.azurerm_route.route",
            "module.UDR.azurerm_route_table.udr",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"spoke1-vnet\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "11.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "83eef38c-300e-4988-b53e-3dfd276222f2",
            "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "location": "koreacentral",
            "name": "spoke1-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "khkim_rg",
            "subnet": [
              {
                "address_prefixes": [
                  "11.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/vm-snet1",
                "name": "vm-snet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "11.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/vm-snet2",
                "name": "vm-snet2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "11.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/86d6e9f1-1227-4473-98f5-7920e3e02eef/resourceGroups/khkim_rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/unique-snet",
                "name": "unique-snet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "owner": "김교현"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spoke1-vnet",
            "resource_group_name": "khkim_rg",
            "subscription_id": "86d6e9f1-1227-4473-98f5-7920e3e02eef"
          },
          "dependencies": [
            "module.RG.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}